<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.mxapplications.androiddrawersheetexample.AndroidDrawerSheetActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/top_image_button"
                android:src="@drawable/ic_arrow_upward_black_48dp" />
            <View
                android:layout_width="48dp"
                android:layout_height="48dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left_image_button"
                android:src="@drawable/ic_arrow_back_black_48dp" />
            <View
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right_image_button"
                android:src="@drawable/ic_arrow_forward_black_48dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_width="48dp"
                android:layout_height="48dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_image_button"
                android:src="@drawable/ic_arrow_downward_black_48dp" />
            <View
                android:layout_width="48dp"
                android:layout_height="48dp"/>
        </TableRow>
    </TableLayout>


    <de.mxapplications.androiddrawersheet.AndroidDrawerSheet
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:drawerAlignment="left"
        android:id="@+id/left_drawer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/drawer_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_text1"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_text2"
                android:layout_gravity="center" />
        </LinearLayout>
    </de.mxapplications.androiddrawersheet.AndroidDrawerSheet>
    <de.mxapplications.androiddrawersheet.AndroidDrawerSheet
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:drawerOffset="48dp"
        app:drawerOffsetInvisible="false"
        app:drawerAlignment="right"
        app:minimumClosingSize="0dp"
        app:minimumOpeningSize="0dp"
        android:id="@+id/right_drawer">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/drawer_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_text1"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_text2"
                android:layout_gravity="center" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_button_text"
                android:id="@+id/right_drawer_close_button"/>
        </LinearLayout>
    </de.mxapplications.androiddrawersheet.AndroidDrawerSheet>
    <de.mxapplications.androiddrawersheet.AndroidDrawerSheet
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:drawerOffset="48dp"
        app:drawerOffsetInvisible="true"
        app:drawerAlignment="top"
        app:minimumOpeningSize="150dp"
        app:minimumClosingSize="100dp"
        app:stickyDrag="false"
        android:id="@+id/top_drawer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/drawer_background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_text1"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_text2"
                android:layout_gravity="center" />
        </LinearLayout>
    </de.mxapplications.androiddrawersheet.AndroidDrawerSheet>
    <de.mxapplications.androiddrawersheet.AndroidDrawerSheet
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:drawerOffset="48dp"
        app:drawerOffsetInvisible="false"
        app:drawerAlignment="bottom"
        android:id="@+id/bottom_drawer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/drawer_background"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_text1"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_text2"
                android:layout_gravity="center" />
        </LinearLayout>
    </de.mxapplications.androiddrawersheet.AndroidDrawerSheet>



</RelativeLayout>
